--- a/EcommerceApp2/frontend/index.html
+++ b/EcommerceApp2/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href={http://res.cloudinary.com/dgsey2kim/image/upload/v1731136683/xfwt8ejt1bt5q2m39vzs.jpg} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Amit Shop</title>
   </head>
   <body>
     <div id="root"></div>
