Update contact information, add Not Found page, and adjust Learn More section layout

--- a/WebAnd/index.html
+++ b/WebAnd/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/736x/40/e8/cf/40e8cfc08e9040e6c02f22126c678557.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/data/logo/logo-weband.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weband</title>
   </head>
@@ -11,3 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!-- https://i.pinimg.com/736x/40/e8/cf/40e8cfc08e9040e6c02f22126c678557.jpg -->
