--- a/AmiShop/frontend/index.html
+++ b/AmiShop/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml"
-    href="http://res.cloudinary.com/dgsey2kim/image/upload/v1731136683/xfwt8ejt1bt5q2m39vzs.jpg" />
+    href="https://res.cloudinary.com/dgsey2kim/image/upload/v1731136683/xfwt8ejt1bt5q2m39vzs.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amit Shop</title>
 </head>
